More linting fixes